# nexus

./: LICENSE  README.md
doc/: install_postgresql.md
nexus-python/: .env_example  .gitignore  alembic.ini  pyproject.toml
nexus-python/app/: main.py
nexus-python/app/api/v1/: api.py
nexus-python/app/api/v1/endpoints/: documents.py  knowledge.py
nexus-python/app/chunk/: base_chunking.py  fixed_size_chunking.py  hierarchy_chunking.py  paragraph_chunking.py
nexus-python/app/core/: config.py  database.py
nexus-python/app/models/: document.py  knowledge.py  request_document.py
nexus-python/app/repositories/: document_repository.py  knowledge_repository.py
nexus-python/app/schemas/: document.py  knowledge.py
nexus-python/app/services/: document_service.py  knowledge_service.py
nexus-python/app/utils/: loader.py
nexus-python/app/vector_db/: faiss_db.py
nexus-python/migrations/: env.py
nexus-python/migrations/versions/: e79674813f90_initial.py
nexus-react/: package-lock.json  package.json
nexus-react/src/: App.js  styles.css
nexus-react/src/components/: AppCard.jsx  AppCardData.js  Header.jsx  Sidebar.jsx
nexus-react/src/components/ChatBot/: ChatBotCard.js  ChatBotList.js  CreateChatBot.js  EditChatBotModal.js
nexus-react/src/components/KnowledgeBase/: CreateKnowledge.js  EditKnowledgeModal.js  KnowledgeCard.js  KnowledgeList.js  UploadKnowledgeFile.js
nexus-react/src/pages/: ChatBotsPage.js  KnowledgePage.js  KnowledgeTestPage.js
nexus-react/src/services/: ChatBotService.js  KnowledgeService.js
