[project]
name = "nexus-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "chardet>=5.2.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-deepseek>=0.1.3",
    "langchain-ollama>=0.3.3",
    "markdown>=3.8.2",
    "openai>=1.82.1",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pypdf>=5.6.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "tiktoken>=0.9.0",
    "unstructured>=0.18.14",
    "uvicorn>=0.34.3",
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "migrations"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
